@@ -53,6 +53,18 @@ Q.DZA_GRID_EDGES     = [ Q.DZA_MAX_IN_CORE*[1:3 5 8 12 21] ];
 Q.F_BACKEND_COMMON   = true;
 
 
+
+%---------------------------------------------------------------------------
+%--- OEM settings
+%---------------------------------------------------------------------------
+
+Q.STOP_DX            = 0.1;
+Q.GA_START           = 100;
+Q.GA_FACTOR_NOT_OK   = 10;
+Q.GA_FACTOR_OK       = 10;
+Q.GA_MAX             = 1e4;
+
+
 %---------------------------------------------------------------------------
 %--- Various
 %---------------------------------------------------------------------------
